--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./source/style/main.css">
     <link rel="stylesheet" href="./source/style/media.css">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <title>Dashboard</title>
 </head>
 <body>
     <div class="wrap">
 
-        <menu class="menu">
-        </menu>
+        <navigation class="menu">
+            <ul class="menu__buttons">
+                <li class="menu__logo"><a class="menu__logo" href="">W</a><br></li>
+                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/home.png" alt="home"></a><br>Home</li>
+                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/chart.png" alt="chart"></a><br>Statistics</li>
+                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/user.png" alt="user"></a><br>Users</li>
+                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/settings.png" alt="settings"></a><br>Settings</li>
+                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/information.png" alt="information"></a><br>Quires</li>
+                <li class="menu__power-button"><a class="menu-button" href=""><img class="navigation__img>" src="./source/img/nav/power-button.png"></a></li>
+            </ul>
+        </navigation>
         
         <header class="header">
         </header>
