feat: add header

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
         </navigation>
         
         <header class="header">
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/menu.png" alt="menu"></a></div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/folder.png" alt="folder"></a></div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/settings.png" alt="settings"></a></div> 
+            <div class="header__input">
+                <input type="text" id="ip1"/>
+            </div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/upload.png" alt="upload"></a></div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/envelope.png" alt="envelope"></a></div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/planet.png" alt="planet"></a></div>
+            <div class="header__jenner"><img class="header__img-jenner" src="./source/img/header/kendall.jpg" alt="jenner"></a></div>
+            <div class="header__list__name">
+                <h3 class="header__kendall__name">Kendall Jenner</h3>
+                <p class="header__kendall__position">Chief Authority</p>
+            </div>
+            <div class="header__list"><a class ="header__buttons" href=""><img class="header__ellipse" src="./source/img/header/ellipse.png" alt="upload"></a></div>
         </header>
 
         <statistics class="statistics">
