--- a/index.html
+++ b/index.html
@@ -13,33 +13,35 @@
     <div class="wrap">
 
         <navigation class="menu">
+            <div class="menu__logo"><a class="menu__logo" href="">W</a></div>
             <ul class="menu__buttons">
-                <li class="menu__logo"><a class="menu__logo" href="">W</a><br></li>
-                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/home.png" alt="home"></a><br>Home</li>
-                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/chart.png" alt="chart"></a><br>Statistics</li>
-                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/user.png" alt="user"></a><br>Users</li>
-                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/settings.png" alt="settings"></a><br>Settings</li>
-                <li class="menu__list"><a class="menu__button" href=""><img class="navigation__img" src="./source/img/nav/information.png" alt="information"></a><br>Quires</li>
-                <li class="menu__power-button"><a class="menu-button" href=""><img class="navigation__img>" src="./source/img/nav/power-button.png"></a></li>
+                <li class="menu__list"><a class="home__button" href=""><img class="menu__img" src="./source/img/nav/home.png" alt="home"></a><br>Home</li>
+                <li class="menu__list"><a class="statistics__button" href=""><img class="menu__img" src="./source/img/nav/chart.png" alt="chart"></a><br>Statistics</li>
+                <li class="menu__list"><a class="users__button" href=""><img class="menu__img" src="./source/img/nav/user.png" alt="user"></a><br>Users</li>
+                <li class="menu__list"><a class="settings__button" href=""><img class="menu__img" src="./source/img/nav/settings.png" alt="settings"></a><br>Settings</li>
+                <li class="menu__list"><a class="quires__button" href=""><img class="menu__img" src="./source/img/nav/information.png" alt="information"></a><br>Quires</li>
+                <li class="menu__power-button"><a class="power__button" href=""><img class="menu__img>" src="./source/img/nav/power-button.png"></a></li>
             </ul>
         </navigation>
         
         <header class="header">
-            <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/menu.png" alt="menu"></a></div>
+            <div class="header__first-button"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/menu.png" alt="menu"></a></div>
             <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/folder.png" alt="folder"></a></div>
             <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/settings.png" alt="settings"></a></div> 
             <div class="header__input">
-                <input type="text" id="ip1"/>
+                <form action="/action_page.php">
+                    <label for="fname"></label><br>
+                    <input type="text" id="fname" name="fname" value="Search anything here...">
             </div>
             <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/upload.png" alt="upload"></a></div>
             <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/envelope.png" alt="envelope"></a></div>
             <div class="header__list"><a class ="header__buttons" href=""><img class="header__img" src="./source/img/header/planet.png" alt="planet"></a></div>
-            <div class="header__jenner"><img class="header__img-jenner" src="./source/img/header/kendall.jpg" alt="jenner"></a></div>
+            <div class="header__picture"><img class="header__img-kendall" src="./source/img/header/jenner.png" alt="jenner"></a></div>
             <div class="header__list__name">
                 <h3 class="header__kendall__name">Kendall Jenner</h3>
-                <p class="header__kendall__position">Chief Authority</p>
+                    <p class="header__kendall__position">Chief Authority</p>
+                <a class ="header__buttons" href=""><img class="header__ellipse" src="./source/img/header/ellipse.png" alt="upload"></a>
             </div>
-            <div class="header__list"><a class ="header__buttons" href=""><img class="header__ellipse" src="./source/img/header/ellipse.png" alt="upload"></a></div>
         </header>
 
         <statistics class="statistics">
