feat: add fixed menu

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             <img class="row__chat" src="./source/img/aside/chat.png" alt="chat"></img>
                         </li>
                         <li class="sidebar__input-form"></li>
-                        <li class="sidebar__social-icons"></li>
+                        <li class="sidebar__social-icons">
                             <div class="sidebar__icons">
                                 <img class="sidebar__icons" src="./source/img/aside/css3.png" alt="affleck"></img>
                                 <img class="sidebar__icons" src="./source/img/aside/deviant.png" alt="affleck"></img>
@@ -173,6 +173,7 @@
                                 <img class="sidebar__icons" src="./source/img/aside/vk.png" alt="affleck"></img>
                                 <img class="sidebar__icons" src="./source/img/aside/vimeo.png" alt="affleck"></img>
                             </div>
+                        </li>  
                     </ul>
                 </div>
             </div>    
