feat: add scroll example

--- a/index.html
+++ b/index.html
@@ -212,6 +212,25 @@
                         </li>
 
                         <li class="sidebar__body-row">
+                            <img class="sidebar__img" src="./source/img/aside/lawrence.png" alt="lawrence">
+                            <div class="sidebar__text">
+                                <h4 class="row__title">jennifer lawrence</h4>
+                                <p class="row__text">chief authority</p>
+                            </div>
+                            <a class ="sidebar__row__chat" href=""><img class="row__chat" src="./source/img/aside/chat.png" alt="chat"></a>
+                        </li>
+
+                        <li class="sidebar__body-row">
+                            <img class="sidebar__img" src="./source/img/aside/lawrence.png" alt="lawrence">
+                            <div class="sidebar__text">
+                                <h4 class="row__title">jennifer lawrence</h4>
+                                <p class="row__text">chief authority</p>
+                            </div>
+                            <a class ="sidebar__row__chat" href=""><img class="row__chat" src="./source/img/aside/chat.png" alt="chat"></a>
+                        </li>
+                        
+
+                        <li class="sidebar__body-row">
                             <img class="sidebar__img" src="./source/img/aside/pitt.png" alt="pitt">
                             <div class="sidebar__text">
                                 <h4 class="row__title">brad pitt</h4>
