fix: change layout

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="menu">
         <div class="menu__logo"><a class="menu__logo" href=""><img class="menu__logo" src="./source/img/nav/logo.png"></a></div>
             <ul class="menu__buttons">
-                <li class="menu__list"><a class="home__button" href=""><img class="menu__img" src="./source/img/nav/home.png" alt="home"></a><br>Home</li>
-                <li class="menu__list"><a class="statistics__button" href=""><img class="menu__img" src="./source/img/nav/chart.png" alt="chart"></a><br>Statistics</li>
-                <li class="menu__list"><a class="users__button" href=""><img class="menu__img" src="./source/img/nav/user.png" alt="user"></a><br>Users</li>
-                <li class="menu__list"><a class="settings__button" href=""><img class="menu__img" src="./source/img/nav/settings.png" alt="settings"></a><br>Settings</li>
-                <li class="menu__list"><a class="quires__button" href=""><img class="menu__img" src="./source/img/nav/information.png" alt="information"></a><br>Quires</li>
+                <li class="menu__list"><a class="nav__button" href=""><img class="menu__img" src="./source/img/nav/home.png" alt="home"><br>Home</a></li>
+                <li class="menu__list"><a class="nav__button" href=""><img class="menu__img" src="./source/img/nav/chart.png" alt="chart"><br>Statistics</a></li>
+                <li class="menu__list"><a class="nav__button" href=""><img class="menu__img" src="./source/img/nav/user.png" alt="user"><br>Users</a></li>
+                <li class="menu__list"><a class="nav__button" href=""><img class="menu__img" src="./source/img/nav/settings.png" alt="settings"><br>Settings</a></li>
+                <li class="menu__list"><a class="nav__button" href=""><img class="menu__img" src="./source/img/nav/information.png" alt="information"><br>Quires</a></li>
                 <li class="menu__power-button"><a class="power__button" href=""><img class="menu__img>" src="./source/img/nav/power-button.png" alt="power-button"></a></li>
             </ul>
         </div>
@@ -42,43 +42,44 @@
                     <h3 class="header__kendall-name">kendall jenner<br></h3>
                     <p class="header__kendall-position">chief authority</p>
                 </div>
-                <img class="header__menu" src="./source/img/header/ellipse.png" alt="dot_menu"><a class ="header__buttons" href=""></a>
+                <img class="header__menu" src="./source/img/header/envelope.png" alt="dot_menu"><a class ="header__buttons" href=""></a>
+                
             </header>
 
             <div class="statistics">
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily visitors</h3>
-                    <p class="statistics__body">150.000</p>
+                    <p class="statistics__body"><strong>150.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily customers</h3>
-                    <p class="statistics__body">120.000</p>
+                    <p class="statistics__body"><strong>120.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily orders</h3>
-                    <p class="statistics__body">900.000</p>
+                    <p class="statistics__body"><strong>900.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily sales</h3>
-                    <p class="statistics__body">850.000</p>
+                    <p class="statistics__body"><strong>850.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily shipments</h3>
-                    <p class="statistics__body">750.000</p>
+                    <p class="statistics__body"><strong>750.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily revenue</h3>
-                    <p class="statistics__body">$985.000</p>
+                    <p class="statistics__body"><strong>985.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
                     <h3 class="statistics__header">daily reviews</h3>
-                    <p class="statistics__body">600.000</p>
+                    <p class="statistics__body"><strong>600.000</strong></p>
                     <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>
                 </div>
                 <div class="statistics__figures">
@@ -200,7 +201,7 @@
                                 <div class="horizontal__lower-container__left">
                                     <h4 class="lower-container__title">Progress</h4>
                                     <img class="lower-container__img" src="./source/img/main/bars.png" alt="bars">
-                                    <p class="__right-text-left">150.000</p>
+                                    <p class="__right-text-progress"><strong>150.000</strong></p>
                                         <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>  
                                 </div>
                                 
@@ -208,7 +209,7 @@
                                     <h4 class="lower-container__title">Shipments</h4>
                                     <img class="lower-container__img" src="./source/img/main/map.png" alt="map">
                                     <div class="lower-container__text">
-                                        <p class="__right-text-left">120.000</p>
+                                        <p class="__right-text-shipment"><strong>120.000</strong></p>
                                         <p class="statistics__footer"><span class="statistics__footer__first-triangle">V</span>1020<span class="statistics__footer__second-triangle">V</span>1020</p>  
                                     </div>
                                 </div>
@@ -237,7 +238,7 @@
                         <li class="sidebar__body-row">
                             <img class="sidebar__img" src="./source/img/main/quill.png" alt="quill">
                             <div class="sidebar__text">
-                                <h4 class="row__title">jennifer lawrence</h4>
+                                <h4 class="row__title">peter quill</h4>
                                 <p class="row__text">chief authority</p>
                             </div>
                             <a class ="sidebar__row__chat" href=""><img class="row__chat" src="./source/img/aside/chat.png" alt="chat"></a>
@@ -289,6 +290,10 @@
                             <a class ="sidebar__row__chat" href=""><img class="row__chat" src="./source/img/aside/chat.png" alt="chat"></a>
                         </li>
                     </ul>
+
+
+
+
                         <div class="sidebar__input-form">
                             <form>
                                 <label form="sidebar-form"></label>
